# trx_subnetwork

./: CMakeLists.txt  README.md
include/: irt_serial_port.h  serial_port.h  trx_subnetwork.h
src/: irt_serial_port.cpp  run_trx_subnetwork.cpp  serial_port.cpp  trx_subnetwork.cpp
